# cricket-coaching-app

./: .gitignore  CricketTest.csv  README.md  app.py  pyproject.toml
src/: data_loader.py  db.py
src/ai/: recommender.py
src/tabs/: games.py  insights.py  players.py  squad_recommender.py
