[project]
name = "cricket-coaching"
version = "0.1.0"
description = "Cricket coaching app for U11s — Haywards Heath"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
